--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -23,10 +23,10 @@
             <p><%= kitchen.address %></p>
             <div class="flex">
               <div class="flex">
-                <i class="material-icons mr-2">people</i><span><%= kitchen.capacity %></span>
+                <i class="material-icons mr-2">people: </i><span><%= kitchen.capacity %></span>
               </div>
               <div class="flex ml-3">
-                <i class="material-icons mr-2">euro_symbol</i> <%= kitchen.price %>
+                <i class="material-icons mr-2">$</i> <%= kitchen.price %>
               </div>
             </div>
           </div>
@@ -40,4 +40,3 @@
     <% end %>
   </div>
 </div>
-
