--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -1,39 +1,10 @@
-<div class="container mt-3">
-  <div class="row">
-    <div class="col-12">
-      <h1>All our Kitchens</h1>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col">
-      <p>You searched for <strong><%= @query %></strong>. We found <%= @kitchens.count %> kitchens out of our <%= Kitchen.count %> on our website.</p>
-    </div>
-  </div>
-
+<div class="container">
   <div class="row">
     <% @kitchens.each do |kitchen| %>
-      <div class="col-4">
-        <div class="kitchen-card">
-          <div class="kitchen-card-image" style="background-image: url('<%= kitchen.photo %>')"></div>
-          <div class="kitchen-card-content">
-            <div class="kitchen-card-title">
-              <h4><%= kitchen.title %></h4>
-            </div>
-            <p><%= kitchen.address %></p>
-            <div class="flex">
-              <div class="flex">
-                <i class="material-icons mr-2">people: </i><span><%= kitchen.capacity %></span>
-              </div>
-              <div class="flex ml-3">
-                <i class="material-icons mr-2">$</i> <%= kitchen.price %>
-              </div>
-            </div>
-          </div>
-          <div class="kitchen-card-actions">
-            <%= link_to 'More info', kitchen_path(kitchen) %>
-            <a href="#" class="ml-3 text-warning">Edit</a>
-            <a href="#" class="ml-3 text-danger">Remove</a>
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="kitchen-card" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.4)), url('<%= cl_image_path kitchen.photo %>')">
+          <div class="kitchen-name">
+            <%= kitchen.name %>
           </div>
         </div>
       </div>
