--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -1,13 +1,21 @@
 <div class="container">
   <div class="row">
-    <% @kitchens.each do |kitchen| %>
+    <% @kitchens.each do |kitchen| -%>
       <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="kitchen-card" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.4)), url('<%= cl_image_path kitchen.photo %>')">
-          <div class="kitchen-name">
-            <%= kitchen.name %>
+        <div class="kitchen-card" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.4)), url('<%= cl_image_path kitchen.photo -%>')">
+          <%= link_to '', kitchen_path(kitchen), class: "kitchen-link" %>
+          <div class="kitchen-title">
+            <%= kitchen.title -%>
+          </div>
+          <div class="rating-stars">
+            <ul class="list-inline">
+              <% kitchen.rating.times do %>
+              <li><i class="fas fa-star"></i></li>
+              <% end %>
+            </ul>
           </div>
         </div>
       </div>
-    <% end %>
+    <% end -%>
   </div>
 </div>
