--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,1 +1,13 @@
 <h1>All Bookings</h1>
+<%= @bookings.each do |booking|%>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-3">
+      <ul class="list-group">
+        <li class="list-group-item"><%= booking.day %></li>
+        <li class="list-group-item"><%= booking.kitchen %></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<% end %>
