--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,1 +1,18 @@
 <h1>New Booking</h1>
+
+
+<div class="container">
+  <%= simple_form_for [@kitchen, @booking] do |f| %>
+  <div class="row">
+    <div class="col-xs-4 col-md-3 col-md-offset-3">
+      <%= f.input :day %>
+      <%= f.submit "Confirm", class: "btn btn-primary" %>
+    </div>
+  </div>
+
+
+
+</div>
+
+
+<% end %>
