--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,1 +1,5 @@
 <h1>Edit booking</h1>
+<div class="mt-3">
+  <button id="Accept" class="btn btn-primary">Accept</button>
+  <button id="Decline" class="btn btn-primary">Decline!</button>
+</div>
