done with basic front-end of show page

--- a/app/assets/stylesheets/kitchens.scss
+++ b/app/assets/stylesheets/kitchens.scss
@@ -2,3 +2,53 @@
   display: flex;
   justify-content: center;
 }
+
+.price {
+  color: rgba(0,0,0,0.8);
+  font-weight: bold;
+}
+
+.description {
+  h4 {
+    padding-bottom: 20px;
+    color: $gray;
+  }
+}
+
+.amenities {
+  h4 {
+    padding-bottom: 20px;
+    color: $gray;
+  }
+  padding-bottom: 25px;
+}
+
+.description {
+  h4 {
+    padding-bottom: 20px;
+    color: $gray;
+  }
+  padding-bottom: 25px;
+}
+
+.capacity {
+  h4 {
+    padding-bottom: 20px;
+    color: $gray;
+  }
+  padding-bottom: 25px;
+}
+
+.price-and-book {
+  padding: 8px;
+  padding: 10px 100px;
+  margin-top: 10px;
+  border-radius: 5px
+}
+
+.btn {
+  background-color: #8CD76E;
+  padding: 5px 15px;
+  color: white;
+  border-radius: 7px;
+}
