booking (almost there)

--- a/app/assets/stylesheets/kitchens.scss
+++ b/app/assets/stylesheets/kitchens.scss
@@ -48,7 +48,19 @@
 
 .btn {
   background-color: #8CD76E;
-  padding: 5px 15px;
+  padding: 5px 25px;
   color: white;
   border-radius: 7px;
+}
+
+// .title {
+//   h1 {
+//     font-size: 24px !important;
+//     font-weight: bold !important;
+//   }
+// }
+
+.title-yo {
+  font-size: 24px;
+  font-weight: bold;
 }
