--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -10,7 +10,7 @@
         <p>$<%= @kitchen.price %></p>
       </div>
       <div class="book">
-        <%= link_to 'Book', new_booking_path(@kitchen), class: "btn" %>
+        <%= link_to 'Book', new_kitchen_booking_path(@kitchen), class: "btn" %>
       </div>
     </div>
   </div>
