--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -2,3 +2,33 @@
   <%= f.input :day, :as => :date %>
   <%= f.submit "Book", class: "btn btn-primary" %>
 <% end %>
+
+<div class="container">
+  <div class="title-price-container">
+    <div class="title">
+      <h1 id="title-yo"><%= @kitchen.title %></h1>
+    </div>
+    <div class="price-and-book">
+      <div class="price">
+        <p>$<%= @kitchen.price %></p>
+      </div>
+      <div class="book">
+        <%= link_to 'Book', new_kitchen_booking_path(@kitchen), class: "btn" %>
+      </div>
+    </div>
+  </div>
+  <div class="amenities-and-reviews-container">
+    <div class="description">
+      <h4>Description</h4>
+      <%= @kitchen.description %>
+    </div>
+    <div class="amenities">
+      <h4>Amenities</h4>
+      <%= @kitchen.amenities %>
+    </div>
+    <div class="capacity">
+      <h4>Capacity</h4>
+      <%= @kitchen.capacity %> people
+    </div>
+  </div>
+</div>
