done with displaying the right kitchens on index page

--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -17,5 +17,6 @@
         </div>
       </div>
     <% end -%>
+    <%= link_to 'List your kitchen', new_kitchen_path, class: "btn btn-primary" %>
   </div>
 </div>
