completed booking page

--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -18,7 +18,7 @@
           </div>
           <div class="rating-stars">
             <ul class="list-inline">
-              <%= kitchen.rating.times do %>
+              <% kitchen.rating.times do %>
                 <li><i class="fas fa-star"></i></li>
               <% end %>
             </ul>
