--- a/app/assets/stylesheets/components/_main_banner.scss
+++ b/app/assets/stylesheets/components/_main_banner.scss
@@ -12,6 +12,8 @@
   font-size: 50px;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  font-family: 'Muli', sans-serif;
+  letter-spacing: 4px;
 }
 .main-banner p {
   font-size: 25px;
@@ -19,4 +21,5 @@
   color: rgb(255, 255, 255);
   opacity: 0.6;
   margin-bottom: 30px;
+  letter-spacing: 4px;
 }
