--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,7 +1,11 @@
-<%= simple_form_for [@kitchen, @booking] do |f| %>
-  <%= f.input :day, :as => :date %>
-  <%= f.submit "Book", class: "btn btn-primary" %>
-<% end %>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= @kitchen.photo %>');">
+  <div class="banner-content">
+    <%= simple_form_for [@kitchen, @booking] do |f| %>
+        <%= f.input :day, :as => :date %>
+        <%= f.submit "Book", class: "btn btn-primary" %>
+      <% end %>
+  </div>
+</div>
 
 <div class="container">
   <div class="title-price-container">
@@ -11,9 +15,6 @@
     <div class="price-and-book">
       <div class="price">
         <p>$<%= @kitchen.price %></p>
-      </div>
-      <div class="book">
-        <%= link_to 'Book', new_kitchen_booking_path(@kitchen), class: "btn" %>
       </div>
     </div>
   </div>
