completed login page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,6 +9,10 @@
   justify-content: center;
 }
 
+.banner-sign-in {
+  height: 100vh;
+}
+
 .container {
   font-family: 'Muli', sans-serif !important;
   padding-top: 10px;
