--- a/app/assets/stylesheets/kitchens.scss
+++ b/app/assets/stylesheets/kitchens.scss
@@ -3,6 +3,7 @@
   justify-content: center;
 }
 
+
 .price {
   color: #7D7D7D;
   font-weight: bold;
@@ -74,4 +75,8 @@
 
 .booking-form {
   align: center;
+}
+
+.orange-text {
+  color: #FA6828 !important;
 }
