--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Bookings</h1>
-<%= @bookings.each do |booking|%>
+<%= @booking.each do |booking|%>
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-md-offset-3">
