--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -2,7 +2,7 @@
   <div class="banner-content">
     <h1>Dream Kitchens</h1>
     <p>The best kitchens in the world 🌍</p>
-    <a class="btn btn-success btn-lg">Share Your Kitchen</a>
+    <%= link_to 'Share Your Kitchen', new_kitchen_path, class: "btn btn-success btn-lg" %>
   </div>
 </div>
 
