added search bar, added amenities to home kitchens

--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -6,6 +6,8 @@
   </div>
 </div>
 
+
+
 <div class="container">
   <div class="row">
     <% @kitchens.each do |kitchen| %>
@@ -24,7 +26,8 @@
             </ul>
           </div>
         </div>
-
+        <%= kitchen.amenities %>
+        <%= kitchen.amenities %>
       </div>
     <% end %>
   </div>
