--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Show booking</h1>
-
+<div class="bookings">
+  <div class="bookings-in">
+    <% @bookings_in.each do |booking|%>
+      <%= "booking on:" + booking.kitchen.title %>
+      <%= "from:" + booking.user.username %>
+      <%= booking.day %>
+    <% end  %>
+  </div>
+  <div class="bookings-out">
+    <% @bookings_out.each do |booking|%>
+      <%= "kitchen:" + booking.kitchen.title %>
+      <%= booking.day %>
+    <% end  %>
+  </div>
+</div>
