--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -8,7 +8,7 @@
 <div class="container">
   <div class="row">
     <% @kitchens.each do |kitchen| %>
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="kitchen-card" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.4)), url('<%= cl_image_path kitchen.photo -%>')">
           <%= link_to '', kitchen_path(kitchen), class: "kitchen-link" %>
           <div class="kitchen-title">
@@ -22,7 +22,11 @@
             </ul>
           </div>
         </div>
-        <%= kitchen.amenities %>
+        <%= "Max Cap: " + kitchen.capacity.to_s %>
+          <br>
+        <div class="thinner">
+          <%= kitchen.amenities %>
+        </div>
       </div>
     <% end %>
   </div>
