--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,12 +1,33 @@
-<h1>All Bookings</h1>
-<%= @booking.each do |booking|%>
+
+<% unless @bookings_in.empty? %>
+  <h3>The following bookings have come in:</h1>
+  <% @bookings_in.each do |booking|%>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-3">
+        <ul class="list-group">
+          <li class="list-group-item"><%= booking.day %></li>
+          <li class="list-group-item"><%= booking.kitchen.title %></li>
+          <li class="list-group-item"><%= booking.user.username %></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <% end %>
+<% end %>
+
+<h3>Your bookings:</h1>
+<% @bookings_out.each do |booking|%>
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-md-offset-3">
       <ul class="list-group">
         <li class="list-group-item"><%= booking.day %></li>
-        <li class="list-group-item"><%= booking.kitchen %></li>
+        <li class="list-group-item"><%= booking.kitchen.title %></li>
       </ul>
+      <%= link_to "Cancel", booking_path(booking),
+        method: :delete,
+        data: { confirm: "Are you sure?" } %>
     </div>
   </div>
 </div>
