change date of a booking that you made

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,1 +1,6 @@
-<h1>Edit booking</h1>
+<div class="date-update-form">
+  <%= simple_form_for [@booking] do |f| %>
+    <%= f.input :day, :as => :date %>
+    <%= f.submit "Update", class: "btn btn-primary" %>
+  <% end %>
+</div>
