--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -28,6 +28,7 @@
       <%= link_to "Cancel", booking_path(booking),
         method: :delete,
         data: { confirm: "Are you sure?" } %>
+      <%= link_to "Change date", edit_booking_path(booking)%>
     </div>
   </div>
 </div>
