--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -8,11 +8,18 @@
 
   <div class="col-xs-12 col-md-6">
     <div class="user-kitchens">
-      <% @user_kitchens.each do |kitchen| %>
-        <%= kitchen.title %>
-      <% end %>
-      <h1>Kitchens below</h1>
-
+      <h1>Kitchens</h1>
+      <ul>
+        <% @user_kitchens.each do |kitchen| %>
+          <li>
+            <%= kitchen.title %>
+            <%= link_to "Delete", kitchen_path(kitchen),
+            method: :delete,
+            data: { confirm: "Are you sure?" } %>
+            <%= link_to "Edit", edit_kitchen_path(kitchen)%>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
