rounded search bar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
         <%= form_tag kitchens_path, method: :get do %>
         <%= text_field_tag :query,
           params[:query],
-          class: "form-control",
+          class: "form-control rounded-edges",
           placeholder: "Find your dream kitchen"
         %>
       <% end %>
