--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -11,6 +11,10 @@
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="kitchen-card" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.4)), url('<%= cl_image_path kitchen.photo -%>')">
           <%= link_to '', kitchen_path(kitchen), class: "kitchen-link" %>
+          <div class="avatar">
+            <%= cl_image_tag(kitchen.user.photo, width: 150, height: 150, crop: :thumb, gravity: :face, class: "card-avatar") %> %>
+            <!-- <img src="../images/logo.svg" alt="nothing"> -->
+          </div>
           <div class="kitchen-title">
             <%= kitchen.title %>
           </div>
