--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -9,23 +9,23 @@
   <div class="row">
     <% @kitchens.each do |kitchen| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
-        <div class="kitchen-card" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.4)), url('<%= cl_image_path kitchen.photo -%>')">
+        <div class="kitchen-card" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.9)), url('<%= cl_image_path kitchen.photo -%>')">
           <%= link_to '', kitchen_path(kitchen), class: "kitchen-link" %>
           <div class="avatar">
-            <%= cl_image_tag(kitchen.user.photo, width: 150, height: 150, crop: :thumb, gravity: :face, class: "card-avatar") %> %>
+            <%= cl_image_tag(kitchen.user.photo, width: 150, height: 150, crop: :thumb, gravity: :face, class: "card-avatar") %>
             <!-- <img src="../images/logo.svg" alt="nothing"> -->
           </div>
           <div class="kitchen-title">
             <%= kitchen.title %>
           </div>
-          <div class="rating-stars">
+        </div>
+        <div class="rating-stars">
             <ul class="list-inline">
               <% kitchen.rating.times do %>
                 <li><i class="fas fa-star"></i></li>
               <% end %>
             </ul>
           </div>
-        </div>
         <%= "Max Cap: " + kitchen.capacity.to_s %>
           <br>
         <div class="thinner">
