--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -1,4 +1,4 @@
-<div class="main-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2) 500%), url('https://images.unsplash.com/photo-1512916194211-3f2b7f5f7de3?ixlib=rb-0.3.5&s=5d75928313fe96ea335421979b96cd31&auto=format&fit=crop&w=1950&q=80');">
+<div class="main-banner" style="background-image: linear-gradient(-225deg, rgba(252,75,82,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1512916194211-3f2b7f5f7de3?ixlib=rb-0.3.5&s=5d75928313fe96ea335421979b96cd31&auto=format&fit=crop&w=1950&q=80');">
   <div class="banner-content">
     <h1>Dream Kitchens</h1>
     <p>The best kitchens in the world 🌍</p>
