--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -12,7 +12,9 @@
         <div class="kitchen-card" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.9)), url('<%= cl_image_path kitchen.photo -%>')">
           <%= link_to '', kitchen_path(kitchen), class: "kitchen-link" %>
           <div class="avatar">
-            <%= cl_image_tag(kitchen.user.photo, width: 150, height: 150, crop: :thumb, gravity: :face, class: "card-avatar") %>
+            <%= link_to user_profile_path(kitchen.user) do %>
+              <%= cl_image_tag(kitchen.user.photo, width: 150, height: 150, crop: :thumb, gravity: :face, class: "card-avatar") %>
+            <% end %>
             <!-- <img src="../images/logo.svg" alt="nothing"> -->
           </div>
           <div class="kitchen-title">
