--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,28 +1,34 @@
 <div class="container margin-top-70">
   <% if flash[:notice] %>
-  <div class="alert alert-danger  alert-dismissible" role="alert">
+  <div class="alert alert-success alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <%= flash[:notice] %>
   </div>
   <% end %>
   <div class="col-xs-12 col-md-6">
-    <h1 id="title-yo"><%= "Welcome " + current_user.username + "!" %></h1>
+    <h1 id="title-yo"><%= @user.username %></h1>
+    <%= cl_image_tag(@user.photo, width: 400, height: 400, crop: :thumb, gravity: :face, class: "profile-avatar") %>
+    <h4>Bio</h4>
+    <%= @user.bio %>
 
-    <%= link_to "manage bookings", bookings_path %>
   </div>
 
   <div class="col-xs-12 col-md-6">
     <div class="user-kitchens">
       <h1>Kitchens</h1>
       <ul>
-        <% @user_kitchens.each do |kitchen| %>
-          <li>
-            <%= link_to "#{kitchen.title}", kitchen_path(kitchen) %>
-            <%= link_to "Delete", kitchen_path(kitchen),
-            method: :delete,
-            data: { confirm: "Are you sure?" } %>
-            <%= link_to "Edit", edit_kitchen_path(kitchen)%>
-          </li>
+        <% if @user_kitchens.nil? %>
+          <p> <%= @user.username %>has no kitchens listed.</p>
+        <% else %>
+          <% @user_kitchens.each do |kitchen| %>
+            <li>
+              <%= link_to "#{kitchen.title}", kitchen_path(kitchen) %>
+              <%= link_to "Delete", kitchen_path(kitchen),
+              method: :delete,
+              data: { confirm: "Are you sure?" } %>
+              <%= link_to "Edit", edit_kitchen_path(kitchen)%>
+            </li>
+          <% end %>
         <% end %>
       </ul>
     </div>
