--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
           <%= image_tag "http://www.nyceda.org/wp-content/uploads/2012/02/User-yellow-icon.png", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to "Profile", dashboard_path %>
+              <%= link_to "Dashboard", dashboard_path %>
             </li>
             <li>
               <%= link_to destroy_user_session_path, method: :delete do %>
