--- a/app/assets/stylesheets/kitchens.scss
+++ b/app/assets/stylesheets/kitchens.scss
@@ -88,3 +88,16 @@
 .margin-top-70 {
   margin-top: 70px;
 }
+
+.margin-top-50 {
+  margin-top: 50px;
+}
+
+.profile-headers {
+  color: white;
+  font-size: 24px;
+}
+
+ul {
+  list-style: none;
+}
