--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,8 +6,19 @@
   </div>
   <% end %>
   <div class="col-xs-12 col-md-6">
-    <h1 id="title-yo"><%= "Welcome " + current_user.username + "!" %></h1>
-
+    <% if current_user.username.nil? %>
+      <h1 id="title-yo">Welcome!</h1>
+    <% else %>
+      <h1 id="title-yo"><%= "Welcome " + current_user.username + "!" %></h1>
+    <% end %>
+    <% if current_user.photo.file.nil? %>
+      <div class="picture-placeholder" style="font-size: 250px">
+        <i class="fas fa-user"></i>
+      </div>
+    <% else %>
+      <%= cl_image_tag(current_user.photo, width: 1000, height: 1000, crop: :thumb, gravity: :face, class: "profile-avatar") %>
+    <% end %>
+    <h4>Bio</h4>
     <%= link_to "manage bookings", bookings_path %>
   </div>
 
