--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -18,7 +18,10 @@
     <% else %>
       <%= cl_image_tag(current_user.photo, width: 1000, height: 1000, crop: :thumb, gravity: :face, class: "profile-avatar") %>
     <% end %>
+    <h3><%= current_user.from %></h3>
     <h4>Bio</h4>
+    <%# link_to "edit profile", edit_user_profile_path(current_user) %>
+    <%= link_to "edit profile", edit_user_registration_path %>
     <%= link_to "manage bookings", bookings_path %>
   </div>
 
@@ -32,6 +35,7 @@
             <%= link_to "Delete", kitchen_path(kitchen),
             method: :delete,
             data: { confirm: "Are you sure?" } %>
+            |
             <%= link_to "Edit", edit_kitchen_path(kitchen)%>
           </li>
         <% end %>
