Geocoding All excellent

--- a/app/views/kitchens/edit.html.erb
+++ b/app/views/kitchens/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="sign-in-container">
-  <div class="banner banner-sign-in" style="background-image: linear-gradient(-225deg, rgba(252,75,82,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1523039031846-6b3f39302cb8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=9acdc9891ec5cb2363f053937d93749d&auto=format&fit=crop&w=1550&q=80');">
+  <div class="banner banner-sign-in" style="background-image: linear-gradient(-225deg, rgba(252,75,82,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1523039031846-6b3f39302cb8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=9acdc9891ec5cb2363f053937d93749d&auto=format&fit=crop&w=1550&q=80');" alt="center">
     <div class="banner-content">
       <%= simple_form_for [@kitchen] do |f| %>
         <%= f.input :title%>
