--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -40,4 +40,8 @@
     height: 600px;"
     data-markers="<%= @markers.to_json %>"
   ></div>
-</div>
+  <div id="map" style="width: 100%; height: 300px;"></div>
+
+  <% content_for(:after_js) do %>
+
+  <% end %>
