--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -27,30 +27,40 @@
 
   <div class="col-xs-12 col-md-6">
     <div class="user-kitchens">
-      <h1>Kitchens</h1>
-      <ul>
-        <% current_user.kitchens.each do |kitchen| %>
-        <div class="card margin-top-50" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%=kitchen.photo %>')">
-          <h2 class="profile-headers card-description"><%= link_to "#{kitchen.title}", kitchen_path(kitchen), class: "profile-headers" %></h2>
+      <h1 id="title-yo"> Your kitchens</h1>
+      <div class="user-kitchens">
+        <% if @user_kitchens.empty?%>
+          You don't have any kitchens.
+          <br>
+          <%= link_to "Share your kitchen", new_kitchen_path, class: "btn btn-primary" %>
+        <% else %>
 
-          <div class="rating-stars rating-stars-profile">
-            <ul class="list-inline">
-              <% kitchen.rating.times do %>
-                <li ><i class="fas fa-star"></i></li>
-              <% end %>
-            </ul>
+        <ul>
+          <% current_user.kitchens.each do |kitchen| %>
+          <div class="card margin-top-50" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%=kitchen.photo %>')">
+            <h2 class="profile-headers card-description"><%= link_to "#{kitchen.title}", kitchen_path(kitchen), class: "profile-headers" %></h2>
+
+            <div class="rating-stars rating-stars-profile">
+              <ul class="list-inline">
+                <% kitchen.rating.times do %>
+                  <li ><i class="fas fa-star"></i></li>
+                <% end %>
+              </ul>
+            </div>
           </div>
-        </div>
 
-          <li>
-            <%= link_to "Delete", kitchen_path(kitchen),
-            method: :delete,
-            data: { confirm: "Are you sure?" } %>
-            |
-            <%= link_to "Edit", edit_kitchen_path(kitchen)%>
-          </li>
+            <li>
+              <%= link_to "Delete", kitchen_path(kitchen),
+              method: :delete,
+              data: { confirm: "Are you sure?" } %>
+              |
+              <%= link_to "Edit", edit_kitchen_path(kitchen)%>
+            </li>
+          <% end %>
+        </ul>
+
         <% end %>
-      </ul>
+      </div>
     </div>
   </div>
 </div>
