--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -21,8 +21,8 @@
     <h3><%= current_user.from %></h3>
     <h4>Bio</h4>
     <%# link_to "edit profile", edit_user_profile_path(current_user) %>
-    <%= link_to "edit profile", edit_user_registration_path %>
-    <%= link_to "manage bookings", bookings_path %>
+    <%= link_to "edit profile", edit_user_registration_path, class: "btn btn-success" %>
+    <%= link_to "manage bookings", bookings_path, class: "btn btn-primary" %>
   </div>
 
   <div class="col-xs-12 col-md-6">
@@ -50,11 +50,10 @@
           </div>
 
             <li>
-              <%= link_to "Delete", kitchen_path(kitchen),
+              <%= link_to "Delete", kitchen_path(kitchen), class: "btn btn-danger", style: "margin-top: 10px;",
               method: :delete,
               data: { confirm: "Are you sure?" } %>
-              |
-              <%= link_to "Edit", edit_kitchen_path(kitchen)%>
+              <%= link_to "Edit", edit_kitchen_path(kitchen), class: "btn btn-success", style: "margin-top: 10px;"%>
             </li>
           <% end %>
         </ul>
